load("@bazel_skylib//rules:diff_test.bzl", "diff_test")
load("@bazel_skylib//rules:write_file.bzl", "write_file")

genrule(
    name = "version_grep",
    srcs = [],
    outs = ["version"],
    cmd = "$(CUE_BIN) version | grep 'cue version' > $@",
    toolchains = [
        "@rules_cue//cue:resolved_toolchain",
    ],
)

write_file(
    name = "verison_golden",
    out = "version.golden",
    content = ["cue version v0.9.2\n"],
)

diff_test(
    name = "version_test",
    file1 = ":version_grep",
    file2 = ":verison_golden",
)

genrule(
    name = "dec",
    srcs = [
        "tests.cue",
        "tests.enc.yaml",
        "tests_tool.cue",
        "//:sue.cue",
        "//cue.mod:module.cue",
    ],
    outs = ["tests.dec.yaml"],
    cmd = "cd tests; ../$(CUE_BIN) cmd sue",
    toolchains = [
        "@rules_cue//cue:resolved_toolchain",
    ],
)

write_file(
    name = "dec_golden",
    out = "tests.dec.yaml.golden",
    content = ["key: value\nsecretKey: secret value"],
)

diff_test(
    name = "dec_test",
    file1 = ":dec",
    file2 = ":dec_golden",
)
